--- a/assets/styles.css
+++ b/assets/styles.css
@@ -180,9 +180,9 @@ body {
 .link-title {
     font-family: sans-serif;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 700;
     margin-bottom: 4px;
-    color: #1a0dab;
+    color: #4a4a4d;
     display: flex;
     align-items: center;
 }
@@ -190,12 +190,13 @@ body {
 .link-url {
     font-family: sans-serif;
     font-size: 14px;
-    color: #1a0dab;
+    color: #3e78e2;
     margin-bottom: 4px;
 }
 
 .link-description {
     font-size: 14px;
+    font-family: sans-serif;
     color: #5f6368;
     line-height: 1.4;
 }
