Change background color in assets/styles.css from #e5ebed to #fafbff for a lighter aesthetic.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -49,7 +49,7 @@
 
 body {
     font-family: "Crimson Text", serif;
-    background-color: #e5ebed;
+    background-color: #fafbff;
     color: #202124;
     line-height: 1.6;
 }
